// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker should render 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render 2`] = `
<div
  class="rdt"
>
  <div />
  <div
    class="rdtPicker"
  >
    <div
      class="rdtDays"
    >
      <table>
        <thead>
          <tr>
            <th
              class="rdtPrev"
            >
              <span>
                ‹
              </span>
            </th>
            <th
              class="rdtSwitch"
              colspan="5"
              data-value="3"
            >
              April 2017
            </th>
            <th
              class="rdtNext"
            >
              <span>
                ›
              </span>
            </th>
          </tr>
          <tr>
            <th
              class="dow"
            >
              Su
            </th>
            <th
              class="dow"
            >
              Mo
            </th>
            <th
              class="dow"
            >
              Tu
            </th>
            <th
              class="dow"
            >
              We
            </th>
            <th
              class="dow"
            >
              Th
            </th>
            <th
              class="dow"
            >
              Fr
            </th>
            <th
              class="dow"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="rdtDay rdtOld"
              data-value="26"
            >
              26
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="27"
            >
              27
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="28"
            >
              28
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="29"
            >
              29
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="30"
            >
              30
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="31"
            >
              31
            </td>
            <td
              class="rdtDay"
              data-value="1"
            >
              1
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="2"
            >
              2
            </td>
            <td
              class="rdtDay"
              data-value="3"
            >
              3
            </td>
            <td
              class="rdtDay"
              data-value="4"
            >
              4
            </td>
            <td
              class="rdtDay"
              data-value="5"
            >
              5
            </td>
            <td
              class="rdtDay"
              data-value="6"
            >
              6
            </td>
            <td
              class="rdtDay"
              data-value="7"
            >
              7
            </td>
            <td
              class="rdtDay"
              data-value="8"
            >
              8
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="9"
            >
              9
            </td>
            <td
              class="rdtDay"
              data-value="10"
            >
              10
            </td>
            <td
              class="rdtDay"
              data-value="11"
            >
              11
            </td>
            <td
              class="rdtDay"
              data-value="12"
            >
              12
            </td>
            <td
              class="rdtDay"
              data-value="13"
            >
              13
            </td>
            <td
              class="rdtDay"
              data-value="14"
            >
              14
            </td>
            <td
              class="rdtDay rdtToday"
              data-value="15"
            >
              15
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="16"
            >
              16
            </td>
            <td
              class="rdtDay"
              data-value="17"
            >
              17
            </td>
            <td
              class="rdtDay"
              data-value="18"
            >
              18
            </td>
            <td
              class="rdtDay"
              data-value="19"
            >
              19
            </td>
            <td
              class="rdtDay"
              data-value="20"
            >
              20
            </td>
            <td
              class="rdtDay"
              data-value="21"
            >
              21
            </td>
            <td
              class="rdtDay"
              data-value="22"
            >
              22
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="23"
            >
              23
            </td>
            <td
              class="rdtDay"
              data-value="24"
            >
              24
            </td>
            <td
              class="rdtDay"
              data-value="25"
            >
              25
            </td>
            <td
              class="rdtDay"
              data-value="26"
            >
              26
            </td>
            <td
              class="rdtDay"
              data-value="27"
            >
              27
            </td>
            <td
              class="rdtDay"
              data-value="28"
            >
              28
            </td>
            <td
              class="rdtDay"
              data-value="29"
            >
              29
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="30"
            >
              30
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="1"
            >
              1
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="2"
            >
              2
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="3"
            >
              3
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="4"
            >
              4
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="5"
            >
              5
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="6"
            >
              6
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DatePicker should render date format only with month 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MMMM"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render date format only with year 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render date picker with time picker 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY h:mm A"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render date picker with time picker 2`] = `
<div
  class="rdt"
>
  <div />
  <div
    class="rdtPicker"
  >
    <div
      class="rdtDays"
    >
      <table>
        <thead>
          <tr>
            <th
              class="rdtPrev"
            >
              <span>
                ‹
              </span>
            </th>
            <th
              class="rdtSwitch"
              colspan="5"
              data-value="3"
            >
              April 2017
            </th>
            <th
              class="rdtNext"
            >
              <span>
                ›
              </span>
            </th>
          </tr>
          <tr>
            <th
              class="dow"
            >
              Su
            </th>
            <th
              class="dow"
            >
              Mo
            </th>
            <th
              class="dow"
            >
              Tu
            </th>
            <th
              class="dow"
            >
              We
            </th>
            <th
              class="dow"
            >
              Th
            </th>
            <th
              class="dow"
            >
              Fr
            </th>
            <th
              class="dow"
            >
              Sa
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="rdtDay rdtOld"
              data-value="26"
            >
              26
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="27"
            >
              27
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="28"
            >
              28
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="29"
            >
              29
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="30"
            >
              30
            </td>
            <td
              class="rdtDay rdtOld"
              data-value="31"
            >
              31
            </td>
            <td
              class="rdtDay"
              data-value="1"
            >
              1
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="2"
            >
              2
            </td>
            <td
              class="rdtDay"
              data-value="3"
            >
              3
            </td>
            <td
              class="rdtDay"
              data-value="4"
            >
              4
            </td>
            <td
              class="rdtDay"
              data-value="5"
            >
              5
            </td>
            <td
              class="rdtDay"
              data-value="6"
            >
              6
            </td>
            <td
              class="rdtDay"
              data-value="7"
            >
              7
            </td>
            <td
              class="rdtDay"
              data-value="8"
            >
              8
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="9"
            >
              9
            </td>
            <td
              class="rdtDay"
              data-value="10"
            >
              10
            </td>
            <td
              class="rdtDay"
              data-value="11"
            >
              11
            </td>
            <td
              class="rdtDay"
              data-value="12"
            >
              12
            </td>
            <td
              class="rdtDay"
              data-value="13"
            >
              13
            </td>
            <td
              class="rdtDay"
              data-value="14"
            >
              14
            </td>
            <td
              class="rdtDay rdtToday"
              data-value="15"
            >
              15
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="16"
            >
              16
            </td>
            <td
              class="rdtDay"
              data-value="17"
            >
              17
            </td>
            <td
              class="rdtDay"
              data-value="18"
            >
              18
            </td>
            <td
              class="rdtDay"
              data-value="19"
            >
              19
            </td>
            <td
              class="rdtDay"
              data-value="20"
            >
              20
            </td>
            <td
              class="rdtDay"
              data-value="21"
            >
              21
            </td>
            <td
              class="rdtDay"
              data-value="22"
            >
              22
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="23"
            >
              23
            </td>
            <td
              class="rdtDay"
              data-value="24"
            >
              24
            </td>
            <td
              class="rdtDay"
              data-value="25"
            >
              25
            </td>
            <td
              class="rdtDay"
              data-value="26"
            >
              26
            </td>
            <td
              class="rdtDay"
              data-value="27"
            >
              27
            </td>
            <td
              class="rdtDay"
              data-value="28"
            >
              28
            </td>
            <td
              class="rdtDay"
              data-value="29"
            >
              29
            </td>
          </tr>
          <tr>
            <td
              class="rdtDay"
              data-value="30"
            >
              30
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="1"
            >
              1
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="2"
            >
              2
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="3"
            >
              3
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="4"
            >
              4
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="5"
            >
              5
            </td>
            <td
              class="rdtDay rdtNew"
              data-value="6"
            >
              6
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr>
            <td
              class="rdtTimeToggle"
              colspan="7"
            >
              12:00 AM
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`DatePicker should render error 1`] = `
<div>
  <div>
    <label
      class="input default left error"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render error when invalid value is set 1`] = `
<div>
  <div>
    <label
      class="input default left error"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="YYYY"
        type="text"
        value="xxx"
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render null value as empty string 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;
